# holded-mcp

./: README.md  pyproject.toml  server.py
scripts/: install-cli.sh
src/holded_mcp/: __main__.py  app.py  cli.py  config.py  errors.py  holded_client.py  invoices.py  mcp_server.py  stdio.py
