[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "holded-mcp"
version = "0.1.0"
description = "MCP server (FastAPI) to manage Holded invoicing documents (facturas)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "mcp>=0.1.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "uvicorn[standard]>=0.27.0",
]

[project.scripts]
holded-mcp = "holded_mcp.__main__:main"
holded-mcp-stdio = "holded_mcp.stdio:main"

[tool.hatch.build.targets.wheel]
packages = ["src/holded_mcp"]
